--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,14 @@
 server {
     listen 80;
-    server_name localhost;
+    server_name indianf4championship.com;
+
+    # Redirect from server's IP to the domain name
+    if ($host != "indianf4championship.com") {
+        return 301 http://indianf4championship.com$request_uri;
+    }
 
     location / {
-        proxy_pass http://127.0.0.1:5000;  # Forward HTTP requests to Flask on port 5000
+        proxy_pass http://localhost:5000;  # Forward HTTP requests to Flask on port 5000
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -20,13 +25,17 @@ server {
 
 server {
     listen 443 ssl;
-    server_name localhost;
+    server_name indianf4championship.com
+    # Redirect from server's IP to the domain name
+    if ($host != "indianf4championship.com") {
+        return 301 https://indianf4championship.com$request_uri;
+    }
 
     ssl_certificate /etc/nginx/ssl/nginx.crt;
     ssl_certificate_key /etc/nginx/ssl/nginx.key;
 
     location / {
-        proxy_pass http://127.0.0.1:5000;  # Forward HTTPS requests to Flask on port 5000
+        proxy_pass http://localhost:5000;  # Forward HTTPS requests to Flask on port 5000
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
