--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,8 @@ server {
         proxy_send_timeout 600;
         proxy_read_timeout 600;
         send_timeout 600;
+        client_max_body_size 50M;
+
     }
 }
 
@@ -36,5 +38,7 @@ server {
         proxy_send_timeout 600;
         proxy_read_timeout 600;
         send_timeout 600;
+        client_max_body_size 50M;
+        
     }
 }
